Updated plugin properties.

--- a/src/main/webapp/WEB-INF/liferay-plugin-package.properties
+++ b/src/main/webapp/WEB-INF/liferay-plugin-package.properties
@@ -1,8 +1,9 @@
 author=Inofix GmbH, Luzern
 change-log=
 licenses=LGPL
+liferay-portal-profile-names=CE
 liferay-versions=7.0.3+
-long-description=
+long-description=A Bootstrap 3 based Liferay Theme for the Flussbad Portal
 module-group-id=de.flussbad-berlin
 module-incremental-version=1
 name=Flussbad Theme
@@ -11,5 +12,5 @@ resources-importer-developer-mode-enabled=true
 resources-importer-target-class-name=com.liferay.portal.kernel.model.Group
 resources-importer-target-value=Flussbad Theme
 resources-importer-update-mode-enabled=true
-short-description=
+short-description=A Bootstrap 3 based Liferay Theme for the Flussbad Portal
 tags=
